--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ docutils==0.13.1
 imagesize==0.7.1
 Jinja2==2.9.4
 MarkupSafe==0.23
+pkg-resources==0.0.0
+pluggy==0.4.0
 py==1.4.32
 Pygments==2.1.3
 pytest==3.0.5
@@ -15,3 +17,5 @@ six==1.10.0
 snowballstemmer==1.2.1
 Sphinx==1.5.1
 termcolor==1.1.0
+tox==2.7.0
+virtualenv==15.1.0
